<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingTop="44dp"
    android:paddingBottom="44dp">

    <ImageView
        android:id="@+id/humidity_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_humidity_svgrepo_com"
        app:layout_constraintEnd_toStartOf="@+id/wind_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_percent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/humidity_img"
        app:layout_constraintStart_toStartOf="@id/humidity_img"
        app:layout_constraintTop_toBottomOf="@id/humidity_img" />

    <TextView
        android:id="@+id/humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/humidity_title"
        app:layout_constraintEnd_toEndOf="@id/humidity_percentage"
        app:layout_constraintStart_toStartOf="@id/humidity_percentage"
        app:layout_constraintTop_toBottomOf="@id/humidity_percentage" />


    <ImageView
        android:id="@+id/wind_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_air_24"
        app:layout_constraintEnd_toStartOf="@+id/air_pressure_img"
        app:layout_constraintStart_toEndOf="@+id/humidity_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/wind_img"
        app:layout_constraintStart_toStartOf="@id/wind_img"
        app:layout_constraintTop_toBottomOf="@id/wind_img" />

    <TextView
        android:id="@+id/wind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/wind_title"
        app:layout_constraintEnd_toEndOf="@id/wind_speed"
        app:layout_constraintStart_toStartOf="@id/wind_speed"
        app:layout_constraintTop_toBottomOf="@id/wind_speed" />

    <ImageView
        android:id="@+id/air_pressure_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_air_pressure_two"
        app:layout_constraintEnd_toStartOf="@+id/visibility_img"
        app:layout_constraintStart_toEndOf="@+id/wind_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/air_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_pressure"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/air_pressure_img"
        app:layout_constraintStart_toStartOf="@id/air_pressure_img"
        app:layout_constraintTop_toBottomOf="@id/air_pressure_img" />

    <TextView
        android:id="@+id/air_pressure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/air_pressure_title"
        app:layout_constraintEnd_toEndOf="@id/air_pressure"
        app:layout_constraintStart_toStartOf="@id/air_pressure"
        app:layout_constraintTop_toBottomOf="@id/air_pressure" />


    <ImageView
        android:id="@+id/visibility_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/air_pressure_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/visible_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visible_area"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/visibility_img"
        app:layout_constraintStart_toStartOf="@id/visibility_img"
        app:layout_constraintTop_toBottomOf="@id/visibility_img" />

    <TextView
        android:id="@+id/visibility_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/visibility_title"
        app:layout_constraintEnd_toEndOf="@id/visible_area"
        app:layout_constraintStart_toStartOf="@id/visible_area"
        app:layout_constraintTop_toBottomOf="@id/visible_area" />

</androidx.constraintlayout.widget.ConstraintLayout>